--- a/12-rock-paper-scissors-auto.html
+++ b/12-rock-paper-scissors-auto.html
@@ -8,14 +8,12 @@
 
     <p><b>Rock Paper Scissors</b></p>
     <button 
-      onclick="pickComputerMove('rock');" 
-      class="move-button">
+      class="move-button js-rock-button">
         <img src="images/rock-emoji.png" 
               class="move-icon">
     </button>
     <button 
-      onclick="pickComputerMove('paper');"
-      class="move-button">
+      class="move-button js-paper-button">
       <img src="images/paper-emoji.png" 
           class="move-icon">
     </button>
